--- a/b.html
+++ b/b.html
@@ -14,6 +14,9 @@
 </ol>
 <br><br>
 <h2>&nbsp;B</h2>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/FvU_8qi2VOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 <p> &nbsp;&nbsp; <strong>"B"</strong> is song of "snzae". The release date is August 11th, 2021. The genre is <strong>ballad</strong>. </p>
 <img src="b.jpg">
 </body>
