--- a/c.html
+++ b/c.html
@@ -14,6 +14,9 @@
 </ol>
 <br><br>
 <h2>&nbsp;C</h2>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/3ky10EF7CYU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 <p> &nbsp;&nbsp; <strong>"C"</strong> is song of "Steve Barakatt". The release date is October 7th, 2005. The genre is <strong>jazz</strong>.</p>
 <img src="c.jpg">
 </body>
