--- a/a.html
+++ b/a.html
@@ -4,16 +4,27 @@
   <title>해보자</title>
   <meta charset="utf-8">
   <link rel="icon" href="음표.PNG">
+<style>
+  a {
+        color:black;
+    text-decoration:none;
+  }
+  h1 {
+    font-size: 3rem;
+    text-align: center;
+  }
+</style>
 </head>
 <body>
 <h1>&nbsp;<a href="index.html">SONG</a></h1>
 <ol>
-<li><a href="a.html">A</a></li>
-<li><a href="b.html">B</a></li>
-<li><a href="c.html">C</a></li>
+<li><a href="a.html" style="color:red;text-decoration:underline;font-weight:bold">A</a></li>
+<li><a href="b.html" style="color:green">B</a></li>
+<li><a href="c.html" style="color:purple">C</a></li>
 </ol>
+
 <br><br>
-<h2>&nbsp;A</h2>
+<h2 style="color:red;">&nbsp;A</h2>
 <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/QnAhnxmSNFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
