--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
   <title>해보자</title>
   <meta charset="utf-8">
   <link rel="icon" href="음표.PNG">
+<style>
+  a {
+        color:black;
+    text-decoration:none;
+  }
+  h1 {
+    font-size: 3rem;
+    text-align: center;
+  }
+</style>
 </head>
 <body>
 <h1>&nbsp;<a href="index.html">SONG</a></h1>
 <ol>
-<li><a href="a.html">A</a></li>
-<li><a href="b.html">B</a></li>
-<li><a href="c.html">C</a></li>
+<li><a href="a.html" style="color:red">A</a></li>
+<li><a href="b.html" style="color:green">B</a></li>
+<li><a href="c.html" style="color:purple">C</a></li>
 </ol>
 <br><br>
  &nbsp;&nbsp; hello &nbsp
