--- a/b.html
+++ b/b.html
@@ -3,32 +3,26 @@
 <head>
   <title>해보자</title>
   <meta charset="utf-8">
-  <link rel="icon" href="음표.PNG">
-<style>
-  a {
-        color:black;
-    text-decoration:none;
-  }
-  h1 {
-    font-size: 3rem;
-    text-align: center;
-  }
-</style>
+  <link rel="icon" href="음표.ico">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>&nbsp;<a href="index.html">SONG</a></h1>
-<ol>
-<li><a href="a.html" style="color:red">A</a></li>
-<li><a href="b.html" style="color:green;text-decoration:underline;font-weight:bold">B</a></li>
-<li><a href="c.html" style="color:purple">C</a></li>
-</ol>
-
-<br><br>
+<h1><a href="index.html"><img src="음표.jpg" style="vertical-align:middle; width:40px; height:46px; margin-right:10px;">SONG</a></h1>
+<div id="grid">
+  <ol>
+    <li><a href="song.html">Song</a></li>
+    <li><a href="a.html" style="color:red">A</a></li>
+    <li><a href="b.html" style="color:green">B</a></li>
+    <li><a href="c.html" style="color:purple">C</a></li>
+  </ol>
+  <div id = "gridB">
 <h2 style="color:green;">&nbsp;B</h2>
 <p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/FvU_8qi2VOU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 <p> &nbsp;&nbsp; <strong>"B"</strong> is song of "snzae". The release date is August 11th, 2021. The genre is <strong>ballad</strong>. </p>
 <img src="b.jpg">
+</div>
+</div>
 </body>
 </html>
