--- a/song.html
+++ b/song.html
@@ -16,13 +16,10 @@
     <li><a href="c.html" style="color:purple">C</a></li>
   </ol>
   <div id = "gridB">
-<h2 style="color:red;">&nbsp;A</h2>
-<p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/QnAhnxmSNFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</p>
-<p> &nbsp;&nbsp; <strong>"A"</strong> is song of "Rainbow". The release date is Augeust 12th, 2010. The genre is <strong>dance</strong>.</p>
-<img src="a.jpg">
+    <h2 style="display: inline">&nbsp;Song</h2><sup><a href = "https://en.wikipedia.org/wiki/Song">[Details]</a></sup>
+    <p>A song is a musical composition intended to be performed by the human voice. This is often done at distinct and fixed pitches (melodies) using patterns of sound and silence. Songs contain various forms, such as those including the repetition and variation of sections.
+    </p>
+  </div>
 </div>
-</div>
-</body>
+  </body>
 </html>
