--- a/1.html
+++ b/1.html
@@ -3,39 +3,22 @@
 <head>
   <title>해보자</title>
   <meta charset="utf-8">
-  <link rel="icon" href="음표.PNG">
-<style>
-  a {
-        color:black;
-    text-decoration:none;
-  }
-  h1 {
-    font-size: 3rem;
-    text-align: center;
-  }
-</style>
+  <link rel="icon" href="음표.ico">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>&nbsp;<a href="index.html">SONG</a></h1>
-<ol>
-<li><a href="a.html" style="color:red">A</a></li>
-<li><a href="b.html" style="color:green">B</a></li>
-<li><a href="c.html" style="color:purple">C</a></li>
-</ol>
-
-<!--
-<h1>&nbsp;<a href="index.html">SONG</a></h1>
-<ol>
-<li><a href="a.html">A</a></li>
-<li><a href="b.html">B</a></li>
-<li><a href="c.html">C</a></li>
-</ol>
--->
-
-
-<br><br>
- &nbsp;&nbsp; hello &nbsp
- <p>
+<h1><a href="index.html"><img src="음표.jpg" style="vertical-align:middle; width:40px; height:46px; margin-right:10px;">SONG</a></h1>
+<div id="grid">
+  <ol>
+    <li><a href="song.html">Song</a></li>
+    <li><a href="a.html" style="color:red">A</a></li>
+    <li><a href="b.html" style="color:green">B</a></li>
+    <li><a href="c.html" style="color:purple">C</a></li>
+  </ol>
+  <div id = "gridB">
+    <h3>hello<h3>
+  </div>
+</div>
 
  <div id="disqus_thread"></div>
 <script>
@@ -57,7 +40,6 @@
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-</p>
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
