--- a/1.html
+++ b/1.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <h1><a href="index.html"><img src="음표.jpg" style="vertical-align:middle; width:40px; height:46px; margin-right:10px;">SONG</a></h1>
+<input type="button" value="Gray" onclick="
+document.querySelector('body').style.backgroundColor='#bdbdbd';
+">
 <div id="grid">
   <ol>
     <li><a href="song.html">Song</a></li>
