--- a/1.html
+++ b/1.html
@@ -11,6 +11,8 @@
 <input type="button" value="Gray" onclick="
 document.querySelector('body').style.backgroundColor='#bdbdbd';
 ">
+<input type="button" value="White" onclick="
+document.querySelector('body').style.backgroundColor='#ffffff'">
 <div id="grid">
   <ol>
     <li><a href="song.html">Song</a></li>
