--- a/a.html
+++ b/a.html
@@ -3,17 +3,20 @@
 <head>
   <title>해보자</title>
   <meta charset="utf-8">
-  <link rel="icon" href="음표.ico">
+  <link rel="icon" href="음표.jpg">
   <link rel="stylesheet" href="style.css">
+  <script src="colors.js"></script>
 </head>
 <body>
 <h1><a href="index.html"><img src="음표.jpg" style="vertical-align:middle; width:40px; height:46px; margin-right:10px;">SONG</a></h1>
+
 <div id="grid">
   <ol>
+    &nbsp;&nbsp;<input id="night_day" type="button" value="night" onclick="nightDayHandler(this); ">
     <li><a href="song.html">Song</a></li>
-    <li><a href="a.html" style="color:red">A</a></li>
-    <li><a href="b.html" style="color:green">B</a></li>
-    <li><a href="c.html" style="color:purple">C</a></li>
+    <li><a href="a.html">A</a></li>
+    <li><a href="b.html">B</a></li>
+    <li><a href="c.html">C</a></li>
   </ol>
   <div id = "gridB">
 <h2 style="color:red;">&nbsp;A</h2>
