--- a/song.html
+++ b/song.html
@@ -3,40 +3,16 @@
 <head>
   <title>해보자</title>
   <meta charset="utf-8">
-  <link rel="icon" href="음표.ico">
+  <link rel="icon" href="음표.jpg">
   <link rel="stylesheet" href="style.css">
+  <script src="colors.js"></script>
 </head>
 <body>
 <h1><a href="index.html"><img src="음표.jpg" style="vertical-align:middle; width:40px; height:46px; margin-right:10px;">SONG</a></h1>
 
-  <input type="button" value="night" onclick="
-  var target = document.querySelector('body');
-if(this.value === 'night'){
-  target.style.backgroundColor='black';
-  target.style.color='white';
-  this.value ='day';
-
-  var alist = document.querySelectorAll('a');
-  var i = 0;
-  while(i < alist.length){
-    alist[i].style.color = '#dbdbdb';
-    i = i + 1;
-  }
-} else {
-  target.style.backgroundColor='White';
-  target.style.color='black';
-  this.value ='night';
-
-  var alist = document.querySelectorAll('a');
-  var i = 0;
-  while(i < alist.length){
-    alist[i].style.color = '#000000';
-    i = i + 1;
-  }
-}
-  ">
 <div id="grid">
   <ol>
+    &nbsp;&nbsp;<input id="night_day" type="button" value="night" onclick="nightDayHandler(this); ">
     <li><a href="song.html">Song</a></li>
     <li><a href="a.html">A</a></li>
     <li><a href="b.html">B</a></li>
