--- a/index.html
+++ b/index.html
@@ -3,44 +3,20 @@
 <head>
   <title>해보자</title>
   <meta charset="utf-8">
-  <link rel="icon" href="음표.ico">
+  <link rel="icon" href="음표.jpg">
   <link rel="stylesheet" href="style.css">
+  <script src="colors.js"></script>
 </head>
 <body>
 <h1><a href="index.html"><img src="음표.jpg" style="vertical-align:middle; width:40px; height:46px; margin-right:10px;">SONG</a></h1>
 
-  <input type="button" value="night" onclick="
-  var target = document.querySelector('body');
-if(this.value === 'night'){
-  target.style.backgroundColor='black';
-  target.style.color='white';
-  this.value ='day';
-
-  var alist = document.querySelectorAll('a');
-  var i = 0;
-  while(i < alist.length){
-    alist[i].style.color = '#dbdbdb';
-    i = i + 1;
-  }
-} else {
-  target.style.backgroundColor='White';
-  target.style.color='black';
-  this.value ='night';
-
-  var alist = document.querySelectorAll('a');
-  var i = 0;
-  while(i < alist.length){
-    alist[i].style.color = '#000000';
-    i = i + 1;
-  }
-}
-  ">
 <div id="grid">
   <ol>
+      &nbsp;&nbsp;<input id="night_day" type="button" value="night" onclick="nightDayHandler(this); ">
     <li><a href="song.html">Song</a></li>
-    <li><a href="a.html" style="color:red">A</a></li>
-    <li><a href="b.html" style="color:green">B</a></li>
-    <li><a href="c.html" style="color:purple">C</a></li>
+    <li><a href="a.html">A</a></li>
+    <li><a href="b.html">B</a></li>
+    <li><a href="c.html">C</a></li>
   </ol>
   <div id = "gridB">
     <h3>hello<h3>
@@ -66,7 +42,6 @@ if(this.value === 'night'){
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
