--- a/song.html
+++ b/song.html
@@ -8,7 +8,7 @@
   <script src="colors.js"></script>
 </head>
 <body>
-<h1><a href="index.html"><img src="음표.jpg" style="vertical-align:middle; width:40px; height:46px; margin-right:10px;">SONG</a></h1>
+<h1><a href="index.html"><img id="logo" src="음표.jpg">SONG</a></h1>
 
 <div id="grid">
   <ol>
